--- a/offerstyles.css
+++ b/offerstyles.css
@@ -81,6 +81,12 @@ input {
 .expired-message {
   color: red;
   display: none;
+  font-size: 1.2rem;
+}
+
+.success-message {
+  color: green;
+  font-size: 1.2rem;
 }
 
 /* Media Query for mobile screens (max-width 600px) */
